crates/archon-tui/tests/snapshots/tui_snapshots__markdown_bold_italic_inline_code.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: lines
---
[
    Line::from_iter([
        Span::from("bold").bold(),
        Span::from(" "),
        Span::from("italic").italic(),
        Span::from(" "),
        Span::from("code").yellow().bg(Color::Rgb(40, 40, 50)),
    ]),
]
