crates/archon-tui/tests/snapshots/tui_snapshots__markdown_fenced_code_block.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: lines
---
[
    Line::from(Span::from("[rust]").dark_gray().dim()),
    Line::from(Span::from("fn main() {}").white().bg(Color::Rgb(30, 30, 40))),
]
