crates/archon-tui/tests/snapshots/tui_snapshots__markdown_heading_and_paragraph.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: lines
---
[
    Line::from(Span::from("Title").cyan().bold()),
    Line::default(),
    Line::from("body"),
]
