crates/archon-tui/tests/snapshots/tui_snapshots__markdown_line_dark_theme.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: line
---
Line::from_iter([
    Span::from("hello "),
    Span::from("world").bold(),
])
