crates/archon-tui/tests/snapshots/tui_snapshots__markdown_simple_paragraph.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: lines
---
[
    Line::from("hello world"),
]
