crates/archon-tui/tests/snapshots/tui_snapshots__output_buffer_mixed_entries.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: repr
---
line_count=5
---
user: hello
assistant: hi there
[tool] read_file(src/main.rs)
[thinking] Let me consider...
assistant: here is the answer
