crates/archon-tui/tests/snapshots/tui_snapshots__render_no_changes.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: lines
---
[
    Line::from(Span::from("No changes detected in src/lib.rs").green().bold()),
]
