crates/archon-tui/tests/snapshots/tui_snapshots__splash_with_activity.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: lines
---
[
    Line::from(Span::from("╭─── Archon v1.9.1 ─────────────────────────────────────────────╮").fg(Color::Rgb(80, 120, 220))),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("                                                              "),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("   Welcome back!               ").fg(Color::Rgb(0, 220, 220)).bold(),
        Span::from("Recent Activity                ").fg(Color::Rgb(130, 80, 200)).bold(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("                                                              "),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("        ___  ____   ____ _   _ ").fg(Color::Rgb(0, 220, 220)),
        Span::from("1m ago   Chat session          ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("       / _ \\|  _ \\ / ___| | | |").fg(Color::Rgb(0, 220, 220)),
        Span::from("2h ago   Code review           ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("      | |_| | |_) | |   | |_| |").fg(Color::Rgb(0, 220, 220)),
        Span::from("1d ago   Refactor pass         ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("      |  _  |  _ <| |___|  _  |").fg(Color::Rgb(0, 220, 220)),
        Span::from("                               ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("      |_| |_|_| \\_\\\\____|_| |_|").fg(Color::Rgb(0, 220, 220)),
        Span::from("                               ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("          evidence + agents     ").fg(Color::Rgb(0, 220, 220)),
        Span::from("                               ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("          memory + learning     ").fg(Color::Rgb(0, 220, 220)),
        Span::from("                               ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("          codex + claude oauth  ").fg(Color::Rgb(0, 220, 220)),
        Span::from("                               ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("                                                              "),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("   claude-sonnet-4-6           ").fg(Color::Rgb(0, 180, 180)),
        Span::from("Tips                           ").fg(Color::Rgb(130, 80, 200)).bold(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("   /home/user/archon           ").dark_gray(),
        Span::from("/auth status for OAuth         ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("                               ").dark_gray(),
        Span::from("/agents shows activity         ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("                               ").dark_gray(),
        Span::from("/docs ingest <path>            ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("                               ").dark_gray(),
        Span::from("/gametheory run ...            ").dark_gray(),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from_iter([
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
        Span::from("                                                              "),
        Span::from("│").fg(Color::Rgb(80, 120, 220)),
    ]),
    Line::from(Span::from("╰──────────────────────────────────────────────────────────────╯").fg(Color::Rgb(80, 120, 220))),
    Line::from(Span::from(" >").fg(Color::Rgb(200, 200, 210))),
]
