crates/archon-tui/tests/snapshots/tui_snapshots__statusbar_brief_mode.snap
---
source: crates/archon-tui/tests/tui_snapshots.rs
expression: bar.format()
---
claude-sonnet-4-6 | spoof | ask | $0.00 | [brief]
